# Allamvizsga

./: .gitignore  CMakeLists.txt  DOC To do list.txt  Global.h  QuickTurorial.txt  src.cpp  test.cpp  test.h  tutorial.txt
ADC/: ADC.cpp  ADCCorrecter.cpp
ADC/include/: ADC.h  ADCCorrecter.h  IADC.h  IADCCorrecter.h
Calculate/: ACalculate.cpp  ACleanInput.cpp  BaseCalculate.cpp  BaseCleanInput.cpp  BaseValues.cpp  ICleanInput.cpp
Calculate/include/: ACalculate.h  ACleanInput.h  BaseCalculate.h  BaseCleanInput.h  BaseValues.h  ICalculate.h  ICleanInput.h  IValues.h
Doc/: .~lock.Dokumentáció_Lukács_Botond.docx#  .~lock.Dokumentáció_Lukács_Botond.odt#  .~lock.tesztelés.odt#  Basic electronic component tester.pptm  Basic electronic component tester.pptx  Dokumentáció_Lukács_Botond.docx  Dokumentáció_Lukács_Botond.odt  Lukacs_Botond_prezentacio.pptx  Measurements.xlsx  calculate.mdj  class.mdj  display.mdj  state.mdj  tesztelés.odt
Exceptions/include/: ASKmeasurement.h  CapacitorSlowCharge.h  Cell.h  NoSuchMeasurement.h  NoSuchPort.h  NotAResistor.h  NotATransistor.h  NotSupposedToReachThis.h  NothingConnected.h  NullExept.h  PossiblyCapacitor.h  PossiblyDiode.h
Tests/: BaseCleanInputTest.cpp  TestPrinter.cpp
Tests/BaseCleanInputTests/: BaseCleanInputTest.cpp
Tests/include/: ADCTest.h  BaseCalculateTest.h  BaseCleanInputTest.h  ResistorTest.h  TestPrinter.h
common/: common.cpp
common/include/: common.h
controll/: ASwitchController.cpp  Aswitch.cpp  BaseSwitch.cpp  BaseSwitchController.cpp  DAC.cpp  PID.cpp  spi.cpp  spiPorts.cpp
controll/include/: ASwitchController.h  ASwithcController.h  Aswitch.h  BaseSwitch.h  BaseSwithcController.h  DAC.h  IAswitch.h  IDAC.h  ISwitchController.h  NothingDAC.h  PID.h  spi.h  spiPorts.h  spiPorts.hpp
display/: characterDisplay.cpp  displayDriver.cpp  graphDisplay.cpp  ili9341.cpp
display/include/: characterDisplay.h  displayDriver.h  graphDisplay.h  graphDraver.h  (+1 more)
stateMachine/: Machine.cpp  State.cpp  Transistor.cpp
(+29 files in other folders)
